[metadata]
name = yatt
version = 0.0.1
description='Yet Another Test Tool'

[options]
packages = find:
# packagae_data = var/**/*
install_requires =

# [options.data_files]
# var/ghp =
#     var/docker/greenhouse/Dockerfile
# data = var/docker/greenhouse/settings

[options.entry_points]
console_scripts =
    yatt = yatt.main

[wheel]
universal=1
